App: No enclosing div for "Spielen" button.

--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -153,8 +153,6 @@
 	</div>
 
 	<!-- Spielen-Button -->
-	<div class="content-padded">
-		<button class="topcoat-button--large--cta center full" ontouchend ="openFrage();">Spielen</button>
-	</div>
+	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="openFrage();">Spielen</button>
 </body>
 </html>
