App: Übergange... siehe Details
Rundenübersicht -> KategorieAuswählen -> Frage.

Serverkommunikation gemocked.

--- a/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
+++ b/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
@@ -14,10 +14,10 @@
 	  <script src="../components/steroids-js/steroids.js"></script>
 	  
 	  <script src="../js/ausgewaehlteKategorie.js"></script>
-	      <script src="../js/application.js"></script>
+	  <script src="../js/application.js"></script>
 	</head>
 	<body>
-		<div id="SpielID">Runde 1 gegen Spieler 2</div>
+		<div id="spielBeschreibung"></div>
 		<div id="ausgewaehlteKategorie"></div>
 		<div class="center">
 			<button class="topcoat-button--large button" ontouchend="starteSpiel();">Fortfahren</button>
