App: Optimierung meiner Screens

--- a/Studiduell_Prototyp/www/html/neuesSpiel.html
+++ b/Studiduell_Prototyp/www/html/neuesSpiel.html
@@ -37,7 +37,7 @@
 				<li class="topcoat-list__item custom_List_item">
 					PaulKotte
 				</li>
-				<li class="topcoat-list__item custom_List_item" onclick="createNewGameFriendlist(this)">
+				<li class="topcoat-list__item custom_List_item" ontouchend="createNewGameFriendlist(this)">
 					Phil
 				</li>
 				<!--<li class="topcoat-list__item custom_List_item" ontouchend ="test()">
