App: Frage Auswertungslogik + Weiter-Button center.

--- a/Studiduell_Prototyp/www/html/frage.html
+++ b/Studiduell_Prototyp/www/html/frage.html
@@ -32,6 +32,8 @@
 			</div>
 		</div>
 		
-		<button id="nextButton" class="topcoat-button--large" ontouchend="weiter();">Weiter</button>
+		<div class="center">
+			<button id="nextButton" class="topcoat-button--large" ontouchend="weiter();">Weiter</button>
+		</div>
 	</body>
 </html>
