--- a/Studiduell_Prototyp/www/html/frage.html
+++ b/Studiduell_Prototyp/www/html/frage.html
@@ -24,11 +24,15 @@
 		<div id="antwortTabelle">
 			<div class="row">
 				<button id="antwort1" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort1Popup" class="popupDiv"></div>
 				<button id="antwort2" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort2Popup" class="popupDiv"></div>
 			</div>
 			<div class="row">
 				<button id="antwort3" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort3Popup" class="popupDiv"></div>
 				<button id="antwort4" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort4Popup" class="popupDiv"></div>
 			</div>
 		</div>
 		
