--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -20,7 +20,6 @@
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
 
-	  <script src="../js/rundenuebersicht.js"></script>
 		<script src="../js/application.js"></script>
 			<script src="../js/homescreen.js"></script>
 			<script src="/components/steroids-addons/index.js"></script>
@@ -53,6 +52,13 @@
 				<button class="topcoat-button--large--quiet center full custom_icon_button_left Rand1 textklein yourTurnButton" ontouchend="openRundenuebersicht(1234)" >Paul Kotte</b> </a>
 			</div>
 			-->
-		</div>
+		</div> 
+		<br>
+		<div class="content-padded">
+			<button id="AbmeldenButton" class="topcoat-button--large center full" ontouchend="abmelden()">Logout</button>
+		</div> 
+		<div class="content-padded">
+			<button id="SyncButton" class="topcoat-button--large center full" ontouchend="sync()">Aktualisieren</button>
+		</div> 
 	</body>
 </html>
