--- a/Studiduell_Prototyp/www/html/frage.html
+++ b/Studiduell_Prototyp/www/html/frage.html
@@ -23,17 +23,21 @@
 		
 		<div id="antwortTabelle">
 			<div class="row">
-				<button id="antwort1" class="topcoat-button--large antwortButton" ontouchend="markiereAntwort(this);"></button>
-				<button id="antwort2" class="topcoat-button--large antwortButton" ontouchend="markiereAntwort(this);"></button>
+				<button id="antwort1" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort1Popup" class="popupDiv"></div>
+				<button id="antwort2" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort2Popup" class="popupDiv"></div>
 			</div>
 			<div class="row">
-				<button id="antwort3" class="topcoat-button--large antwortButton" ontouchend="markiereAntwort(this);"></button>
-				<button id="antwort4" class="topcoat-button--large antwortButton" ontouchend="markiereAntwort(this);"></button>
+				<button id="antwort3" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort3Popup" class="popupDiv"></div>
+				<button id="antwort4" class="topcoat-button--large antwortButton" ontouchend="markAnswer(this);"></button>
+				<div id="antwort4Popup" class="popupDiv"></div>
 			</div>
 		</div>
 		
-		<div id="nextButtonDiv" class="center">
-			<button id="nextButton" class="topcoat-button--large" ontouchend="weiter();">Weiter</button>
+		<div class="center">
+			<button id="nextButton" class="topcoat-button--large" disabled ontouchend="next();">Weiter</button>
 		</div>
 	</body>
 </html>
