--- a/Studiduell_Prototyp/www/html/spielerSuchen.html
+++ b/Studiduell_Prototyp/www/html/spielerSuchen.html
@@ -18,17 +18,18 @@
 		<script src="../js/jquery-1.11.0.min.js"></script>
 		<script src="../js/application.js"></script>
 		<script src="../js/spielerSuchen.js"></script>
+		<script src="/components/steroids-addons/index.js"></script>
 	</head>
 	<body>
 		<div class="content-padded">
 			<!-- Spieler suchen -->
-			<div id="SuchTabelle_div">
-				<div id= "Such_Tabellen_Zeile_div" class="row">
+			<div id="suchTabelle_div">
+				<div id= "such_Tabellen_Zeile_div" class="row">
 					<div>
 					<input id="search_username_input" type="search" value="" placeholder="Username" class="topcoat-search-input">
 					</div>
 					<div>
-					<button id="sucheButton" class="topcoat-icon-button custom_icon_button" ontouchend="spielerSuchen()"></button>
+					<button id="sucheButton" class="topcoat-icon-button" ontouchend="spielerSuchen()"></button>
 					</div>
 				</div>
 			</div>
@@ -36,7 +37,7 @@
 
 				<!-- Ergebnisliste -->
 			<div id="ergebnislisteDiv" class="topcoat-list">
-				<h3 class="topcoat-list__header">Suchergebnis</h3>
+				<h1 class="topcoat-list__header">Suchergebnis</h1>
 				<ul class="topcoat-list__container" id="ergebnislisteErweitern">
 					<!--tbd:  Profilbild! -->
 				<!--obsolet
@@ -49,9 +50,12 @@
 				<li class="topcoat-list__item custom_List_item" ontouchend="test()">
 					Phil
 				</li>
-				<li class="topcoat-list__item custom_List_item" ontouchend ="test()">
+				<div class="row">
+				<li class="topcoat-list__item custom_List_item leftColumn" ontouchend ="createNewGame(this)">
 					Phil123
 				</li>
+				<button id="addFriendButton" class="topcoat-icon-button custom_icon_button rightColumn" ontouchend="addAsFriend('Phil123')"></button>
+				</div>
 				-->
 			  </ul>
 			</div>
