App: Rundenübersicht Quadrate & Spielstand berechnen

--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -12,7 +12,7 @@
 
   <script src="../js/onerror.js"></script>
   <script src="../js/console.log.js"></script>
-
+	<script src="../js/jquery-1.11.0.min.js"></script>
 
 
   <!-- cordova.js is served from localhost to ensure the correct version -->
@@ -42,93 +42,93 @@
 		<!-- Names -->
 		<div id="spielstandDiv">
 			<div id="spielerADiv" class="leftColumn spielernameDiv">Spieler 1</div>
-			<div id="scoreDiv" class="middleColumn">5 : 4</div>
+			<div id="scoreDiv" class="middleColumn"></div>
 			<div id="spielerBDiv" class="rightColumn spielernameDiv">Spieler 2</div>
 		</div>
 		
 		<!-- Runden -->
 		<div id="runde1Div">
 			<div class="leftColumn rundenInline">
-				<div id="runde1frage1spieler1" class="quadrat redBackground"></div>
-				<div id="runde1frage2spieler1" class="quadrat redBackground"></div>
-				<div id="runde1frage3spieler1" class="quadrat redBackground"></div>
+				<div id="runde1frage1spieler1" class="quadrat"></div>
+				<div id="runde1frage2spieler1" class="quadrat"></div>
+				<div id="runde1frage3spieler1" class="quadrat"></div>
 			</div>
 			<div class="middleColumn rundeDetailText">
 				Runde 1<br>
 				Kategorie
 			</div>
 			<div class="rightColumn rundenInline">
-				<div id="runde1frage1spieler2" class="quadrat redBackground"></div>
-				<div id="runde1frage2spieler2" class="quadrat redBackground"></div>
-				<div id="runde1frage3spieler2" class="quadrat redBackground"></div>
+				<div id="runde1frage1spieler2" class="quadrat "></div>
+				<div id="runde1frage2spieler2" class="quadrat "></div>
+				<div id="runde1frage3spieler2" class="quadrat "></div>
 			</div>
 		</div>
 		
 		<div id="runde2Div">
 			<div class="leftColumn rundenInline">
-				<div id="runde2frage1spieler1" class="quadrat redBackground"></div>
-				<div id="runde2frage2spieler1" class="quadrat redBackground"></div>
-				<div id="runde2frage3spieler1" class="quadrat redBackground"></div>
+				<div id="runde2frage1spieler1" class="quadrat "></div>
+				<div id="runde2frage2spieler1" class="quadrat "></div>
+				<div id="runde2frage3spieler1" class="quadrat "></div>
 			</div>
 			<div class="middleColumn rundeDetailText">
 				Runde 2<br>
 				Kategorie
 			</div>
 			<div class="rightColumn rundenInline">
-				<div id="runde2frage1spieler2" class="quadrat redBackground"></div>
-				<div id="runde2frage2spieler2" class="quadrat redBackground"></div>
-				<div id="runde2frage3spieler2" class="quadrat greenBackground"></div>
+				<div id="runde2frage1spieler2" class="quadrat "></div>
+				<div id="runde2frage2spieler2" class="quadrat "></div>
+				<div id="runde2frage3spieler2" class="quadrat "></div>
 			</div>
 		</div>
 		
 		<div id="runde3Div">
 			<div class="leftColumn rundenInline">
-				<div id="runde3frage1spieler1" class="quadrat redBackground"></div>
-				<div id="runde3frage2spieler1" class="quadrat redBackground"></div>
-				<div id="runde3frage3spieler1" class="quadrat redBackground"></div>
+				<div id="runde3frage1spieler1" class="quadrat "></div>
+				<div id="runde3frage2spieler1" class="quadrat "></div>
+				<div id="runde3frage3spieler1" class="quadrat "></div>
 			</div>
 			<div class="middleColumn rundeDetailText">
 				Runde 3<br>
 				Kategorie
 			</div>
 			<div class="rightColumn rundenInline">
-				<div id="runde3frage1spieler2" class="quadrat greenBackground"></div>
-				<div id="runde3frage2spieler2" class="quadrat greenBackground"></div>
-				<div id="runde3frage3spieler2" class="quadrat greenBackground"></div>
+				<div id="runde3frage1spieler2" class="quadrat "></div>
+				<div id="runde3frage2spieler2" class="quadrat "></div>
+				<div id="runde3frage3spieler2" class="quadrat "></div>
 			</div>
 		</div>
 		
 		<div id="runde4Div">
 			<div class="leftColumn rundenInline">
-				<div id="runde4frage1spieler1" class="quadrat redBackground"></div>
-				<div id="runde4frage2spieler1" class="quadrat greenBackground"></div>
-				<div id="runde4frage3spieler1" class="quadrat redBackground"></div>
+				<div id="runde4frage1spieler1" class="quadrat "></div>
+				<div id="runde4frage2spieler1" class="quadrat "></div>
+				<div id="runde4frage3spieler1" class="quadrat "></div>
 			</div>
 			<div class="middleColumn rundeDetailText">
 				Runde 4<br>
 				Kategorie
 			</div>
 			<div class="rightColumn rundenInline">
-				<div id="runde4frage1spieler2" class="quadrat redBackground"></div>
-				<div id="runde4frage2spieler2" class="quadrat greenBackground"></div>
-				<div id="runde4frage3spieler2" class="quadrat redBackground"></div>
+				<div id="runde4frage1spieler2" class="quadrat "></div>
+				<div id="runde4frage2spieler2" class="quadrat "></div>
+				<div id="runde4frage3spieler2" class="quadrat "></div>
 			</div>
 		</div>
 		
 		<div id="runde5Div">
 			<div class="leftColumn rundenInline">
-				<div id="runde5frage1spieler1" class="quadrat redBackground"></div>
-				<div id="runde5frage2spieler1" class="quadrat redBackground"></div>
-				<div id="runde5frage3spieler1" class="quadrat redBackground"></div>
+				<div id="runde5frage1spieler1" class="quadrat "></div>
+				<div id="runde5frage2spieler1" class="quadrat "></div>
+				<div id="runde5frage3spieler1" class="quadrat "></div>
 			</div>
 			<div class="middleColumn rundeDetailText">
 				Runde 5<br>
 				Kategorie
 			</div>
 			<div class="rightColumn rundenInline">
-				<div id="runde5frage1spieler2" class="quadrat redBackground"></div>
-				<div id="runde5frage2spieler2" class="quadrat redBackground"></div>
-				<div id="runde5frage3spieler2" class="quadrat redBackground"></div>
+				<div id="runde5frage1spieler2" class="quadrat "></div>
+				<div id="runde5frage2spieler2" class="quadrat "></div>
+				<div id="runde5frage3spieler2" class="quadrat "></div>
 			</div>
 		</div>
 		
