--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -18,9 +18,10 @@
   <!-- cordova.js is served from localhost to ensure the correct version -->
   <script src="http://localhost/cordova.js"></script>
   <script src="../components/steroids-js/steroids.js"></script>
-
+	 <script src="../js/application.js"></script>
   <script src="../js/rundenuebersicht.js"></script>
-    <script src="../js/application.js"></script>
+   <script src="../js/spielerSuchen.js"></script>
+   
 	<script src="/components/steroids-addons/index.js"></script>
 </head>
 
@@ -35,15 +36,15 @@
 			<div class="middleColumn"></div>
 			<div class="rightColumn">
 				<img src="../images/profilbild.png">
-				<img id="addImage" src="../images/addicon.png">
+				<img id="addImage" src="../images/addicon.png" ontouchend="addAsFriendWrapper()">
 			</div>
 		</div>
 		
 		<!-- Names -->
 		<div id="spielstandDiv">
-			<div id="spielerADiv" class="leftColumn spielernameDiv">Spieler 1</div>
+			<div id="spielerADiv" class="leftColumn spielernameDiv"></div>
 			<div id="scoreDiv" class="middleColumn"></div>
-			<div id="spielerBDiv" class="rightColumn spielernameDiv">Spieler 2</div>
+			<div id="spielerBDiv" class="rightColumn spielernameDiv"></div>
 		</div>
 		
 		<!-- Runden -->
