--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -31,7 +31,7 @@
 		<div id="iconsDiv">
 			<div class="leftColumn">
 				<img src="../images/profilbild.png">
-				<img id="kreuzImage" src="../images/Kreuz.png">
+				<img id="kreuzImage" src="../images/Kreuz.png" ontouchend="giveUp()">
 			</div>
 			<div class="middleColumn"></div>
 			<div class="rightColumn">
@@ -135,25 +135,25 @@
 		
 		<div id="runde6Div">
 			<div class="leftColumn rundenInline">
-				<!-- <div id="runde6frage1spieler1" class="quadrat redBackground"></div>
-				<div id="runde6frage2spieler1" class="quadrat redBackground"></div>
-				<div id="runde6frage3spieler1" class="quadrat redBackground"></div> -->
-				Du bist dran
+				<div id="runde6frage1spieler1" class="quadrat"></div>
+				<div id="runde6frage2spieler1" class="quadrat"></div>
+				<div id="runde6frage3spieler1" class="quadrat"></div> 
+				<!--Du bist dran-->
 			</div>
 			<div class="middleColumn rundeDetailText">
 				Runde 6<br>
 				Kategorie
 			</div>
 			<div class="rightColumn rundenInline">
-				<!-- <div id="runde6frage1spieler2" class="quadrat redBackground"></div>
-				<div id="runde6frage2spieler2" class="quadrat redBackground"></div>
-				<div id="runde6frage3spieler2" class="quadrat redBackground"></div> -->
-				Verdeckt
+				<div id="runde6frage1spieler2" class="quadrat"></div>
+				<div id="runde6frage2spieler2" class="quadrat"></div>
+				<div id="runde6frage3spieler2" class="quadrat"></div> 
+				<!--Verdeckt-->
 			</div>
 		</div>
 	</div>
 
 	<!-- Spielen-Button -->
-	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="openFrage();">Spielen</button>
+	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="openFrage()">Spielen</button>
 </body>
 </html>
