--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -54,6 +54,12 @@
 			</div>
 			-->
 		</div> 
+		<div class="topcoat-list" >
+			<h3 class="topcoat-list__header">Offene Duellanfragen:</h3>
+			<ul class="topcoat-list__container" id="OpenDuelRequests_list_container">
+			<!-- Hier werden in der "SYNC" methode die Spiele eingefügt, bei denen der gegner die duellanfrage annehmen muss -->
+			</ul>
+		</div>
 		<br>
 		<div class="content-padded">
 			<button id="AbmeldenButton" class="topcoat-button--large center full" ontouchend="abmelden()">Logout</button>
