app: rundenübersicht aktualisieren

--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -26,7 +26,7 @@
 	</head>
 
 	<body>
-	
+		<div class="content-padded">
 		<h2>Homescreen</h2>
 				
 		<img src="../images/profilbild.png">
@@ -67,5 +67,6 @@
 		<div class="content-padded">
 			<button id="SyncButton" class="topcoat-button--large center full" ontouchend="sync()">Aktualisieren</button>
 		</div> 
+		</div>
 	</body>
 </html>
