--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+	<div class="content-padded">
 	<div id="tableDiv">
 		<!-- Icons -->
 		<div id="iconsDiv">
@@ -156,5 +157,10 @@
 
 	<!-- Spielen-Button -->
 	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="openFrage()">Spielen</button>
-</body>
+
+	<!-- TEST: Aktualisieren-Button, sollte eig in NavigationBar sein! -->
+	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="sync()">Aktualisieren</button>
+	
+	</div>
+	</body>
 </html>
