App: anpassung & test Login & disable Button inRÜ

--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf8">
   <meta name="viewport" content="width=device-width">
-  <title>My Steroids App</title>
+  <title>Rundenuebersicht</title>
 
 
   <link rel="stylesheet" href="../vendor/topcoat/css/topcoat-mobile-light.css" />
@@ -156,10 +156,10 @@
 	</div>
 
 	<!-- Spielen-Button -->
-	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="openFrage()">Spielen</button>
+	<button id="spielenButton" class="topcoat-button--large--cta center full" ontouchend ="openFrage()">Spielen</button>
 
 	<!-- TEST: Aktualisieren-Button, sollte eig in NavigationBar sein! -->
-	<button class="content-padded topcoat-button--large--cta center full" ontouchend ="sync()">Aktualisieren</button>
+	<button class="topcoat-button--large center full" ontouchend ="sync()">Aktualisieren</button>
 	
 	</div>
 	</body>
