--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -27,14 +27,13 @@
 
 	<body>
 		<div class="content-padded">
-		<h2>Homescreen</h2>
 				
 		<img src="../images/profilbild.png">
 		<div id="username_div">Mein Username</div>
 
 		
 		<div class="content-padded">
-			<button id="neuesSpielStartenButton" class="topcoat-button--large--cta center full custom_icon_button_right " ontouchend="openNeuesSpielScreen()">Neues Spiel starten</button>
+			<button id="neuesSpielStartenButton" class="topcoat-button--cta center full custom_icon_button_right " ontouchend="openNeuesSpielScreen()">Neues Spiel starten</button>
 		</div> 
 		
 		<div id="ActionRequiredGames_div">
@@ -61,11 +60,11 @@
 			</ul>
 		</div>
 		<br>
-		<div class="content-padded">
-			<button id="AbmeldenButton" class="topcoat-button--large center full" ontouchend="abmelden()">Logout</button>
+		<div >
+			<button id="AbmeldenButton" class="topcoat-button center full" ontouchend="abmelden()">Logout</button>
 		</div> 
-		<div class="content-padded">
-			<button id="SyncButton" class="topcoat-button--large center full" ontouchend="sync()">Aktualisieren</button>
+		<div >
+			<button id="SyncButton" class="topcoat-button center full" ontouchend="sync()">Aktualisieren</button>
 		</div> 
 		</div>
 	</body>
