--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -33,7 +33,7 @@
 		<div id="iconsDiv">
 			<div class="leftColumn">
 				<img src="../images/profilbild.png">
-				<img id="kreuzImage" src="../images/Kreuz.png" ontouchend="giveUp()">
+				<img id="kreuzImage" src="../images/kreuz.png" ontouchend="giveUp()">
 			</div>
 			<div class="middleColumn"></div>
 			<div class="rightColumn">
