app:suchen screen lupe ausrichtung

--- a/Studiduell_Prototyp/www/html/spielerSuchen.html
+++ b/Studiduell_Prototyp/www/html/spielerSuchen.html
@@ -23,17 +23,29 @@
 	</head>
 	<body>
 		<div class="content-padded">
-			<!-- Spieler suchen -->
+	<div id="suchTabelle_div">
+		<!-- S -->
+		<div id="iconsDiv">
+			<div class="leftColumn">
+				<input id="search_username_input" type="search" value="" placeholder="Nutzername" class="topcoat-search-input">
+			</div>
+			<div class="rightColumn">
+				<img id="addImage" class="sucheButton" src="../images/lupe.png" ontouchend="spielerSuchen()">
+			</div>
+			
+		</div>
+		<!--<div class="content-padded">
 			<div id="suchTabelle_div">
 				<div id= "such_Tabellen_Zeile_div" class="row">
 					<div>
 					<input id="search_username_input" type="search" value="" placeholder="Username" class="topcoat-search-input">
 					</div>
 					<div>
-					<button id="sucheButton" class="topcoat-icon-button" ontouchend="spielerSuchen()"></button>
+						<img id="addImage" class="sucheButton" src="../images/lupe.png" ontouchend="spielerSuchen()">
+					</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			
 
 				<!-- Ergebnisliste -->
