App: historie im homescreen

--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -59,6 +59,11 @@
 			<!-- Hier werden in der "SYNC" methode die Spiele eingefügt, bei denen der gegner die duellanfrage annehmen muss -->
 			</ul>
 		</div>
+		<h2>Historie:</h2>
+		<div id="HistoryGames_div">
+		<!-- Hier werden in der "SYNC" methode die letzten 5 beendeten oder aufgegebenen Spiele eingefügt-->
+		</div> 
+		
 		<br>
 		<div >
 			<button id="SyncButton" class="topcoat-button center full" ontouchend="sync()">Aktualisieren</button>
