--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -157,10 +157,10 @@
 	</div>
 
 	<!-- Spielen-Button -->
-	<button id="spielenButton" class="topcoat-button--large--cta center full" ontouchend ="openFrage()">Spielen</button>
+	<button id="spielenButton" class="topcoat-button--cta center full" ontouchend ="openFrage()">Spielen</button>
 
 	<!-- TEST: Aktualisieren-Button, sollte eig in NavigationBar sein! -->
-	<button class="topcoat-button--large center full" ontouchend ="sync()">Aktualisieren</button>
+	<button class="topcoat-button center full" ontouchend ="sync()">Aktualisieren</button>
 	
 	</div>
 	</body>
