--- a/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
+++ b/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
@@ -7,7 +7,8 @@
 	  
 	  <link rel="stylesheet" href="../vendor/topcoat/css/topcoat-mobile-light.css" />
 	  <link rel="stylesheet" href="../css/ausgewaehlteKategorie.css" />
-	  
+	  		<link rel="stylesheet" href="../css/application.css" />
+			
 	  <script src="../js/jquery-1.11.0.min.js"></script>
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
