--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -29,10 +29,12 @@
 		<div class="content-padded">
 				
 		<img src="../images/profilbild.png">
+		<div id="eingeloggt_als_div">Eingeloggt als:</div>
 		<div id="username_div">Mein Username</div>
 
 		
-		<div >
+		<div id="neuesSpielStartenDIV">
+			
 			<button id="neuesSpielStartenButton" class="topcoat-button--cta center full custom_icon_button_right " ontouchend="openNeuesSpielScreen()">Neues Spiel starten</button>
 		</div> 
 		
