--- a/Studiduell_Prototyp/www/html/login.html
+++ b/Studiduell_Prototyp/www/html/login.html
@@ -20,14 +20,14 @@
 	  
 	</head>
 	<body>
+		<h2 id="schrift">Bitte gebe deinen Benutzernamen und das zugehörige Passwort ein, um dich einzuloggen!</h2>
+		<input id= "username_input" type="text" class="topcoat-text-input  cta center full" placeholder="Benutzername" value=""> <br>
+		<input id= "password_input" type="password" class="topcoat-text-input cta center full" placeholder="Passwort" value=""> <br>
 		
-		<input id= "username_input" type="text" class="topcoat-text-input" placeholder="Username" value=""> <br>
-		<input id= "password_input" type="password" class="topcoat-text-input" placeholder="Passwort" value=""> <br>
-		
-		<button id="LoginButton" class="topcoat-button--large" ontouchend="sendLoginDataToServer();">Login</button> <br>
-		<button id="RegisterButton" class="topcoat-button--large" ontouchend="openRegisterScreen();">Registrieren</button> <br>
-		<button id="TEST_HomeButton" class="topcoat-button--large" ontouchend="openHomeScreen();">TEST: Gehe zu Home</button> 
-		
+		<button id="LoginButton" class="topcoat-button--cta center full" ontouchend="sendLoginDataToServer();">Login</button> <br>
+		<button id="RegisterButton" class="topcoat-button--cta center full" ontouchend="openRegisterScreen();">Registrieren</button> <br>
+<!-- //		<button id="TEST_HomeButton" class="topcoat-button--large center" ontouchend="openHomeScreen();">TEST: Gehe zu Home</button> 
+ -->		
 	</body>
 </html>
 
