--- a/Studiduell_Prototyp/www/html/kategorieAuswaehlen.html
+++ b/Studiduell_Prototyp/www/html/kategorieAuswaehlen.html
@@ -7,6 +7,7 @@
 	  
 	  <link rel="stylesheet" href="../vendor/topcoat/css/topcoat-mobile-light.css" />
 	  <link rel="stylesheet" href="../css/kategorieAuswaehlen.css" />
+	  		<link rel="stylesheet" href="../css/application.css" />
 	  
 	  <script src="../js/jquery-1.11.0.min.js"></script>
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
