--- a/Studiduell_Prototyp/www/html/login.html
+++ b/Studiduell_Prototyp/www/html/login.html
@@ -24,9 +24,9 @@
 		<input id= "username_input" type="text" class="topcoat-text-input" placeholder="Username" value=""> <br>
 		<input id= "password_input" type="password" class="topcoat-text-input" placeholder="Passwort" value=""> <br>
 		
-		<button id="LoginButton" class="topcoat-button--large" ontouchend="sendLoginDataToServer();">Login</button> <br>
-		<button id="RegisterButton" class="topcoat-button--large" ontouchend="openRegisterScreen();">Registrieren</button> <br>
-		<button id="TEST_HomeButton" class="topcoat-button--large" ontouchend="openHomeScreen();">TEST: Gehe zu Home</button> 
+		<button id="LoginButton" class="topcoat-button" ontouchend="sendLoginDataToServer();">Login</button> <br>
+		<button id="RegisterButton" class="topcoat-button" ontouchend="openRegisterScreen();">Registrieren</button> <br>
+		<button id="TEST_HomeButton" class="topcoat-button" ontouchend="openHomeScreen();">TEST: Gehe zu Home</button> 
 		
 	</body>
 </html>
