App: bug fixing

--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -64,9 +64,9 @@
 		</div> 
 		
 		<br>
-		<div >
+		<!-- <div >
 			<button id="SyncButton" class="topcoat-button center full" ontouchend="sync()">Aktualisieren</button>
-		</div> 
+		</div> -->
 		<div >
 			<button id="AbmeldenButton" class="topcoat-button center full" ontouchend="abmelden()">Logout</button>
 		</div> 
