--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -159,8 +159,8 @@
 	<!-- Spielen-Button -->
 	<button id="spielenButton" class="topcoat-button--cta center full" ontouchend ="openFrage()">Spielen</button>
 
-	<!-- TEST: Aktualisieren-Button, sollte eig in NavigationBar sein! -->
-	<button class="topcoat-button center full" ontouchend ="sync()">Aktualisieren</button>
+	<!-- TEST: Aktualisieren-Button, sollte eig in NavigationBar sein!
+	<button class="topcoat-button center full" ontouchend ="sync()">Aktualisieren</button> -->
 	
 	</div>
 	</body>
