--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -13,6 +13,12 @@
 
 	  <script src="../js/onerror.js"></script>
 	  <script src="../js/console.log.js"></script>
+	  
+	<script type="text/javascript" charset="utf-8" src="/cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/components/steroids-js/steroids.js"></script>
+    <script type="text/javascript" charset="utf-8"> </script>
+
+
 
 
 	<script src="../js/jquery-1.11.0.min.js"></script>
