--- a/Studiduell_Prototyp/www/html/login.html
+++ b/Studiduell_Prototyp/www/html/login.html
@@ -13,6 +13,7 @@
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
+	  <script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 	  
 	  <script src="../js/application.js"></script>
 	  <script src="../js/login.js"></script>
@@ -25,8 +26,8 @@
 		<input id= "username_input" type="text" class="topcoat-text-input center full custom_input" placeholder="Benutzername" value=""> <br>
 		<input id= "password_input" type="password" class="topcoat-text-input center full custom_input" placeholder="Passwort" value=""> <br>
 				
-		<button id="LoginButton" class="topcoat-button center full custom_button" ontouchend="sendLoginDataToServer();">Login</button> <br>
-		<button id="RegisterButton" class="topcoat-button center full custom_button" ontouchend="openRegisterScreen();">Registrieren</button> <br>
+		<button id="LoginButton" class="topcoat-button center full custom_button" >Login</button> <br>
+		<button id="RegisterButton" class="topcoat-button center full custom_button" >Registrieren</button> <br>
 		<!--<button id="TEST_HomeButton" class="topcoat-button" ontouchend="openHomeScreen();">TEST: Gehe zu Home</button> -->
 		
 	</body>
