--- a/Studiduell_Prototyp/www/html/register.html
+++ b/Studiduell_Prototyp/www/html/register.html
@@ -15,6 +15,7 @@
 	  <script src="../components/steroids-js/steroids.js"></script>
 	    <script src="/components/steroids-addons/index.js"></script>
 	   <script src="../js/application.js"></script>
+	   <script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 	   
 	  <script src="../js/register.js"></script>
 	 
