--- a/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
+++ b/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
@@ -14,6 +14,7 @@
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
+	  <script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 	  <script src="../js/application.js"></script>
 	  <script src="../js/ausgewaehlteKategorie.js"></script>
 	
