--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -19,9 +19,9 @@
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
-
+		<script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 		<script src="../js/application.js"></script>
-			<script src="../js/homescreen.js"></script>
+		<script src="../js/homescreen.js"></script>
 			<script src="/components/steroids-addons/index.js"></script>
 	</head>
 
@@ -34,13 +34,13 @@
 
 		
 		<div id="neuesSpielStartenDIV">
-			<button id="neuesSpielStartenButton" class="topcoat-button--cta center full custom_icon_button_right " ontouchend="openNeuesSpielScreen()">Neues Spiel starten</button>
+			<button id="neuesSpielStartenButton" class="topcoat-button--cta center full custom_icon_button_right " ">Neues Spiel starten</button>
 		</div> 
 		
 		<div id="ActionRequiredGames_div">
 			<!-- Hier werden in der "SYNC" methode die Spiele eingefügt, bei deinen der Nutzer dran ist!
 			<div class="content-padded">
-				<button class="topcoat-button--large center full custom_icon_button_left Rand2 textklein yourTurnButton" ontouchend ="openRundenuebersicht(1234)" >Du bist an der Reihe gegen <b>Spieler 1</b> </a>
+				<button class="topcoat-button--large center full custom_icon_button_left Rand2 textklein yourTurnButton"  >Du bist an der Reihe gegen <b>Spieler 1</b> </a>
 			</div>
 			-->
 		</div>	
@@ -48,7 +48,7 @@
 		<div id="WaitingForGames_div">
 		<!-- Hier werden in der "SYNC" methode die Spiele eingefügt, bei deinen auf den Gegner gewartet wird!
 			<div class="content-padded">
-				<button class="topcoat-button--large--quiet center full custom_icon_button_left Rand1 textklein yourTurnButton" ontouchend="openRundenuebersicht(1234)" >Paul Kotte</b> </a>
+				<button class="topcoat-button--large--quiet center full custom_icon_button_left Rand1 textklein yourTurnButton" >Paul Kotte</b> </a>
 			</div>
 			-->
 		</div> 
@@ -68,7 +68,7 @@
 			<button id="SyncButton" class="topcoat-button center full" ontouchend="sync()">Aktualisieren</button>
 		</div> -->
 		<div >
-			<button id="AbmeldenButton" class="topcoat-button center full" ontouchend="abmelden()">Logout</button>
+			<button id="AbmeldenButton" class="topcoat-button center full">Logout</button>
 		</div> 
 		
 		</div>
