--- a/Studiduell_Prototyp/www/html/kategorieAuswaehlen.html
+++ b/Studiduell_Prototyp/www/html/kategorieAuswaehlen.html
@@ -13,6 +13,7 @@
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
+	  <script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 	  
 	  <script src="../js/kategorieAuswaehlen.js"></script>
 	      <script src="../js/application.js"></script>
@@ -20,9 +21,9 @@
 	<body>
 		<div id="kategorieText" class="center"><h2>Wähle eine Kategorie aus:</h2></div>
 		<div id="kategorienauswahl" class="center">
-			<button id="kategorie1" class="topcoat-button button" ontouchend="kategorieAuswaehlen(this);"></button>
-			<button id="kategorie2" class="topcoat-button button" ontouchend="kategorieAuswaehlen(this);"></button>
-			<button id="kategorie3" class="topcoat-button button" ontouchend="kategorieAuswaehlen(this);"></button>
+			<button id="kategorie1" class="topcoat-button button" ></button>
+			<button id="kategorie2" class="topcoat-button button" ></button>
+			<button id="kategorie3" class="topcoat-button button" ></button>
 		</div>
 	</body>
 	
