--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -19,6 +19,8 @@
 	<script src="http://localhost/cordova.js"></script>
 	<script src="../components/steroids-js/steroids.js"></script>
 	<script src="/components/steroids-addons/index.js"></script>
+	
+	<script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 	<script src="../js/application.js"></script>
 	<script src="../js/rundenuebersicht.js"></script>
 
