App: Impl. timeout mechanism on questions.

--- a/Studiduell_Prototyp/www/html/frage.html
+++ b/Studiduell_Prototyp/www/html/frage.html
@@ -10,6 +10,7 @@
 	  <link rel="stylesheet" href="../css/frage.css" />
 	  
 	  <script src="../js/jquery-1.11.0.min.js"></script>
+	  <script src="../js/jquery.color.js"></script>
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
@@ -40,5 +41,7 @@
 		<div class="center">
 			<button id="nextButton" class="topcoat-button--large" disabled ontouchend="next();">Weiter</button>
 		</div>
+		
+		<div id="timelineDiv"></div>
 	</body>
 </html>
