App: HomeScreen Listenelemente verkleinert

--- a/Studiduell_Prototyp/www/html/home.html
+++ b/Studiduell_Prototyp/www/html/home.html
@@ -58,7 +58,7 @@
 			</div>
 			-->
 		</div> 
-		<div class="topcoat-list" >
+		<div class="topcoat-list custom_list" >
 			<h3 class="topcoat-list__header">Offene Duellanfragen:</h3>
 			<ul class="topcoat-list__container" id="OpenDuelRequests_list_container">
 			<!-- Hier werden in der "SYNC" methode die Spiele eingefügt, bei denen der gegner die duellanfrage annehmen muss -->
