--- a/Studiduell_Prototyp/www/html/login.html
+++ b/Studiduell_Prototyp/www/html/login.html
@@ -13,16 +13,17 @@
 	  <!-- cordova.js is served from localhost to ensure the correct version -->
 	  <script src="http://localhost/cordova.js"></script>
 	  <script src="../components/steroids-js/steroids.js"></script>
+	  <script src="/components/steroids-addons/index.js"></script>
 	  <script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
 	  
 	  <script src="../js/application.js"></script>
 	  <script src="../js/login.js"></script>
 	  
-	  <script src="/components/steroids-addons/index.js"></script>
+	  
 	  
 	</head>
 	<body>
-		<h2 id="schrift">Bitte gebe deinen Benutzernamen und das zugehörige Passwort ein, um dich einzuloggen!</h2>
+		<h2 id="schrift">Bitte gib deinen Benutzernamen und das zugehörige Passwort ein, um dich einzuloggen!</h2>
 		<input id= "username_input" type="text" class="topcoat-text-input center full custom_input" placeholder="Benutzername" value=""> <br>
 		<input id= "password_input" type="password" class="topcoat-text-input center full custom_input" placeholder="Passwort" value=""> <br>
 				
