--- a/Studiduell_Prototyp/www/html/register.html
+++ b/Studiduell_Prototyp/www/html/register.html
@@ -26,7 +26,7 @@
 		<input id= "username_input" type="text" class="topcoat-text-input custom_input" placeholder="Benutzername" value=""> <br>
 		<input id= "password_input" type="password" class="topcoat-text-input custom_input" placeholder="Passwort" value=""> <br>
 		
-		<button id="RegisterButton" class="topcoat-button center full" ontouchend="sendRegistration();">Los!</button> <br>
+		<button id="RegisterButton" class="topcoat-button center full" >Los!</button> <br>
 		
 	</body>
 </html>
