App: Tap Event Changes

--- a/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
+++ b/Studiduell_Prototyp/www/html/ausgewaehlteKategorie.html
@@ -23,7 +23,7 @@
 		<div id="spielBeschreibung" class="center"></div>
 		<div id="ausgewaehlteKategorie" class="center"></div>
 		<div class="center">
-			<button class="topcoat-button--large button" ontouchend="starteSpiel();">Fortfahren</button>
+			<button id="startRoundButton" class="topcoat-button button" >Fortfahren</button>
 		</div>
 	</body>
 </html>
