--- a/Studiduell_Prototyp/www/html/rundenuebersicht.html
+++ b/Studiduell_Prototyp/www/html/rundenuebersicht.html
@@ -35,11 +35,11 @@
 		<div id="iconsDiv">
 			<div class="leftColumn">
 				<img src="../images/profilbild.png">
-				<img id="kreuzImage" width="50"; height="71" src="../images/kreuz.png" ontouchend="giveUp()">
+				<img id="kreuzImage" width="50"; height="71" src="../images/kreuz.png" >
 			</div>
 			<div class="middleColumn"></div>
 			<div class="rightColumn">
-				<img id="addImage" width="50"; height="71" src="../images/addicon.png" ontouchend="addAsFriendWrapper()">
+				<img id="addImage" width="50"; height="71" src="../images/addicon.png" >
 				<img src="../images/profilbild.png">
 
 			</div>
@@ -159,7 +159,7 @@
 	</div>
 
 	<!-- Spielen-Button -->
-	<button id="spielenButton" class="topcoat-button--cta center full" ontouchend ="openFrage()">Spielen</button>
+	<button id="spielenButton" class="topcoat-button--cta center full" >Spielen</button>
 
 	<!-- TEST: Aktualisieren-Button, sollte eig in NavigationBar sein!
 	<button class="topcoat-button center full" ontouchend ="sync()">Aktualisieren</button> -->
