App: abrunden listenheader

--- a/Studiduell_Prototyp/www/html/neuesSpiel.html
+++ b/Studiduell_Prototyp/www/html/neuesSpiel.html
@@ -31,7 +31,7 @@
 			
 				<!-- Freundesliste -->
 			<div id="freundeslisteDiv" class="topcoat-list">
-				<h3 class="topcoat-list__header">Freundesliste</h3>
+				<h3 id="freundesliste_header" class="topcoat-list__header">Freundesliste</h3>
 				<ul class="topcoat-list__container" id="freundeslisteErweitern">
 					<!--tbd: Freund entfernen Button & Profilbild! -->
 				<!--obsolet<li class="topcoat-list__item ">
