--- a/Studiduell_Prototyp/www/html/spielerSuchen.html
+++ b/Studiduell_Prototyp/www/html/spielerSuchen.html
@@ -38,7 +38,7 @@
 		</div>
 			<!-- Ergebnisliste -->
 			<div id="ergebnislisteDiv" class="topcoat-list">
-				<h1 class="topcoat-list__header">Suchergebnis</h1>
+				<h3 id="ergebnisliste_header"class="topcoat-list__header">Suchergebnis</h3>
 				<ul class="topcoat-list__container" id="ergebnislisteErweitern">
 				</ul>
 			</div>
