--- a/Studiduell_Prototyp/www/html/frage.html
+++ b/Studiduell_Prototyp/www/html/frage.html
@@ -39,10 +39,11 @@
 				<div id="antwort4Popup" class="popupDiv"></div>
 			</div>
 		</div>
-		
+		<!-- wurde durch swiperight ersetzt!  
 		<div class="center">
 			<button id="nextButton" class="topcoat-button--large" disabled>Weiter</button>
 		</div>
+		-->
 		
 		<div id="timelineDiv"></div>
 	</body>
