--- a/Studiduell_Prototyp/www/html/spielerSuchen.html
+++ b/Studiduell_Prototyp/www/html/spielerSuchen.html
@@ -17,6 +17,8 @@
 		<script src="../components/steroids-js/steroids.js"></script>
 		<script src="/components/steroids-addons/index.js"></script>
 		<script src="../js/jquery-1.11.0.min.js"></script>
+		<script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
+		
 		<script src="../js/application.js"></script>
 		<script src="../js/spielerSuchen.js"></script>
 		
@@ -27,16 +29,16 @@
 		<!-- S -->
 		<div id="iconsDiv">
 			<div class="leftColumn">
-				<input id="search_username_input" type="search" value="" placeholder="Nutzername" class="topcoat-search-input">
+				<input id="search_username_input" type="search" value="" placeholder="Benutzername" class="topcoat-search-input">
 			</div>
 			<div class="rightColumn">
-				<img id="addImage" class="sucheButton" src="../images/lupe.png" ontouchend="spielerSuchen()">
+				<img id="addImage" class="sucheButton" src="../images/lupe.png" >
 			</div>
 			
 		</div>
 			<!-- Ergebnisliste -->
 			<div id="ergebnislisteDiv" class="topcoat-list">
-				<h1 class="topcoat-list__header">Suchergebnis</h1>
+				<h3 id="ergebnisliste_header"class="topcoat-list__header">Suchergebnis</h3>
 				<ul class="topcoat-list__container" id="ergebnislisteErweitern">
 				</ul>
 			</div>
