--- a/Studiduell_Prototyp/www/html/neuesSpiel.html
+++ b/Studiduell_Prototyp/www/html/neuesSpiel.html
@@ -17,6 +17,8 @@
 		<script src="../components/steroids-js/steroids.js"></script>
 		<script src="/components/steroids-addons/index.js"></script>
 		<script src="../js/jquery-1.11.0.min.js"></script>
+		<script src="../js/Tocca.js"></script> <!-- Plugin für Tap & Swipe Events! -->
+		
 		<script src="../js/application.js"></script>
 		<script src="../js/neuesSpiel.js"></script>
 		
@@ -29,7 +31,7 @@
 			
 				<!-- Freundesliste -->
 			<div id="freundeslisteDiv" class="topcoat-list">
-				<h3 class="topcoat-list__header">Freundesliste</h3>
+				<h3 id="freundesliste_header" class="topcoat-list__header">Freundesliste</h3>
 				<ul class="topcoat-list__container" id="freundeslisteErweitern">
 					<!--tbd: Freund entfernen Button & Profilbild! -->
 				<!--obsolet<li class="topcoat-list__item ">
