App: [#39] Aufgeben Button neues Bild

--- a/Studiduell_Prototyp/www/html/neuesSpiel.html
+++ b/Studiduell_Prototyp/www/html/neuesSpiel.html
@@ -26,8 +26,8 @@
 	<body>
 		<div class="content-padded">
 			<!-- Spieler suchen -->
-			<button id="spielerSuchenButton" class="topcoat-icon-button custom_icon_button" ontouchend="spielerSuchenSeite()">Spieler suchen</button>
-			<button id="beliebigerSpielerButton" class="topcoat-icon-button custom_icon_button" ontouchend="createNewGameRandom()">Beliebiger Spieler</button>
+			<button id="spielerSuchenButton" class="topcoat-icon-button custom_icon_button" >Spieler suchen</button>
+			<button id="beliebigerSpielerButton" class="topcoat-icon-button custom_icon_button" >Beliebiger Spieler</button>
 			
 				<!-- Freundesliste -->
 			<div id="freundeslisteDiv" class="topcoat-list">
